--- a/index.html
+++ b/index.html
@@ -11,6 +11,34 @@
     />
   </head>
   <body>
+    <div class="cards">
+      <!-- (div.card>img+h2+button{Learn more})*4 -->
+      <div class="card" data-description="Wes is cool">
+        <img src="https://picsum.photos/200?random=2" alt="" />
+        <h2>Wes Bos</h2>
+        <button>Learn more</button>
+      </div>
+      <div class="card" data-description="Scott is neat">
+        <img src="https://picsum.photos/200?random=3" alt="" />
+        <h2>Scott</h2>
+        <button>Learn more</button>
+      </div>
+      <div class="card" data-description="Kait is pretty">
+        <img src="https://picsum.photos/200?random=4" alt="" />
+        <h2>Kait</h2>
+        <button>Learn more</button>
+      </div>
+      <div class="card" data-description="Snickers is hairy">
+        <img src="https://picsum.photos/200?random=5" alt="" />
+        <h2>Snickers</h2>
+        <button>Learn more</button>
+      </div>
+    </div>
+
+    <div class="modal-outer">
+      <div class="modal-inner"></div>
+    </div>
+
     <script src="modals.js"></script>
   </body>
 </html>
